--- a/assets/css/_page/_single.scss
+++ b/assets/css/_page/_single.scss
@@ -117,7 +117,7 @@
     }
 
     p {
-      margin: .5rem 0;
+      margin: 1rem 0;
     }
 
     b, strong {
@@ -126,6 +126,11 @@
       [theme=dark] & {
         color: #ddd;
       }
+    }
+
+    em {
+      font-style: italic;
+      font-family: $blockquote-font;
     }
 
     @include link(false, false);
@@ -239,11 +244,20 @@
 
     blockquote {
       display: block;
+      font-family: $blockquote-font;
+      font-style: italic;
       border-left: .5rem solid $blockquote-color;
       background-color: rgba($blockquote-color, .2);
       padding: .25rem .75rem;
       margin: 1rem 0;
 
+      p:first-child {
+        margin-top: .2rem;
+      }
+  
+      p:last-child {
+        margin-bottom: .2rem;
+      }
       [theme=dark] & {
         border-left-color: $blockquote-color-dark;
         background-color: rgba($blockquote-color-dark, .2);
