--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -10,8 +10,10 @@
 
 // ========== Global ========== //
 // Font and Line Height
-$global-font-family: system-ui, -apple-system, Segoe UI, Roboto, Emoji, Helvetica, Arial, sans-serif !default;
-$global-font-size: 16px !default;
+$global-font-family: 'Linux Biolinum', 'Noto Serif SC', system-ui, -apple-system, Segoe UI, Roboto, Emoji, Helvetica, Arial, sans-serif !default;
+$chinese-kai-font: "AR PL UKai CN", "AR PL UKai CN", "Noto Sans Kaithi", "楷体", "KaiTi", STKaiti, KaiTi_GB2312, SimKai, Kai;
+$blockquote-font: "Linux Biolinum", $chinese-kai-font;
+$global-font-size: 17px !default;
 $global-font-weight: 400 !default;
 $global-line-height: 1.5rem !default;
 
@@ -113,7 +115,7 @@ $pagination-link-hover-color-dark: #fff !default;
 
 // ========== Code ========== //
 // Font family and size of the code
-$code-font-family: "Source Code Pro", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
+$code-font-family: 'Fira Code', "Source Code Pro", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 $code-font-size: .875rem !default;
 
 // Color of the code
