add fallback for kaiti

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -11,7 +11,7 @@
 // ========== Global ========== //
 // Font and Line Height
 $global-font-family: 'Linux Biolinum', 'Noto Serif SC', system-ui, -apple-system, Segoe UI, Roboto, Emoji, Helvetica, Arial, sans-serif !default;
-$chinese-kai-font: "AR PL UKai CN", "AR PL UKai CN", "Noto Sans Kaithi", "楷体", "KaiTi", STKaiti, KaiTi_GB2312, SimKai, Kai;
+$chinese-kai-font: "AR PL UKai CN", "AR PL UKai CN", "Noto Sans Kaithi", "楷体", "KaiTi", STKaiti, KaiTi_GB2312, SimKai, Kai, DFKai-SB, "TW\-Kai", "Noto Serif SC";
 $blockquote-font: "Linux Biolinum", $chinese-kai-font;
 $global-font-size: 17px !default;
 $global-font-weight: 400 !default;
