avoid massive font loading

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -10,7 +10,8 @@
 
 // ========== Global ========== //
 // Font and Line Height
-$global-font-family: 'Linux Biolinum', 'Noto Serif SC', system-ui, -apple-system, Segoe UI, Roboto, Emoji, Helvetica, Arial, sans-serif !default;
+$chinese-song-font: "Noto Serif SC", "Noto Serif CJK SC", "Noto Serif", "宋体", "Songti SC", "SimSun", "STSong", "STSongti-SC";
+$global-font-family: 'Linux Biolinum', #{$chinese-song-font...}, system-ui, -apple-system, Segoe UI, Roboto, Emoji, Helvetica, Arial, sans-serif !default;
 $chinese-kai-font: "AR PL UKai CN", "AR PL UKai CN", "Noto Sans Kaithi", "楷体", "KaiTi", STKaiti, KaiTi_GB2312, SimKai, Kai, DFKai-SB, "TW\-Kai", "Noto Serif SC";
 $blockquote-font: "Linux Biolinum", $chinese-kai-font;
 $global-font-size: 17px !default;
