--- a/layouts/partials/head/link.html
+++ b/layouts/partials/head/link.html
@@ -46,25 +46,21 @@
 {{- partial "plugin/style.html" $options -}}
 
 <style>
-  @import url(https://db.onlinewebfonts.com/c/47f9ef1694f83081f3916f938915af8d?family=Linux+Biolinum);
   @font-face {
-    font-family: "Linux Biolinum";
-    font-weight: bold;
-    src: url("https://db.onlinewebfonts.com/t/15338a5f29ce0433dd537f31c83c2cba.eot");
-    src: url("https://db.onlinewebfonts.com/t/15338a5f29ce0433dd537f31c83c2cba.eot?#iefix")format("embedded-opentype"),
-    url("https://db.onlinewebfonts.com/t/15338a5f29ce0433dd537f31c83c2cba.woff2")format("woff2"),
-    url("https://db.onlinewebfonts.com/t/15338a5f29ce0433dd537f31c83c2cba.woff")format("woff"),
-    url("https://db.onlinewebfonts.com/t/15338a5f29ce0433dd537f31c83c2cba.ttf")format("truetype"),
-    url("https://db.onlinewebfonts.com/t/15338a5f29ce0433dd537f31c83c2cba.svg#Linux Biolinum Bold V2")format("svg");
+    font-family: 'Linux Biolinum';
+    font-style: normal;
+    src: url('/fonts/LinBiolinum_R.otf');
   }
+
   @font-face {
-    font-family: "Linux Biolinum";
+    font-family: 'Linux Biolinum';
     font-style: italic;
-    src: url("https://db.onlinewebfonts.com/t/501d7989a37732d94b022a3bce488282.eot");
-    src: url("https://db.onlinewebfonts.com/t/501d7989a37732d94b022a3bce488282.eot?#iefix")format("embedded-opentype"),
-    url("https://db.onlinewebfonts.com/t/501d7989a37732d94b022a3bce488282.woff2")format("woff2"),
-    url("https://db.onlinewebfonts.com/t/501d7989a37732d94b022a3bce488282.woff")format("woff"),
-    url("https://db.onlinewebfonts.com/t/501d7989a37732d94b022a3bce488282.ttf")format("truetype"),
-    url("https://db.onlinewebfonts.com/t/501d7989a37732d94b022a3bce488282.svg#Linux Biolinum Italic V1")format("svg");
+    src: url('/fonts/LinBiolinum_RI.otf');
+  }
+
+  @font-face {
+    font-family: 'Linux Biolinum';
+    font-weight: bold;
+    src: url('/fonts/LinBiolinum_RB.otf');
   }
 </style>
